[project]
name = "rizin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rz-bindings",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rzpipe>=0.6.2",
]

[tool.uv.workspace]
members = [
    "rz-bindgen",
]

[tool.uv.sources]
rz-bindings = { workspace = true }
